# tabularis-server

./: Makefile  README.md  pyproject.toml
app/: config.py  dependencies.py  logging_config.py  main.py
app/api/v1/: auth.py  convert.py  history.py  usage.py
app/builders/: __init__.py  excel_builder.py
app/core/: auth.py
app/db/: session.py
app/db/migrations/: env.py
app/models/: audit_log.py  user.py
app/policies/: __init__.py  usage_policy.py
app/repositories/: __init__.py  audit_log_repository.py  conversion_repository.py  user_repository.py
app/schemas/: usage.py  user.py
app/services/: audit.py  conversion.py  download_cache.py  page_selection.py  usage_limits.py  usage_window.py
app/strategies/: __init__.py  table_extraction.py
docs/: ARCHITECTURE.md
tabularis-server/: .env.example  .gitignore  Dockerfile
tabularis-server/app/: dependencies.py
tabularis-server/app/api/v1/: auth.py  history.py  usage.py
tabularis-server/app/core/: auth.py  security.py
tabularis-server/app/db/: session.py
tabularis-server/app/db/migrations/: env.py
tabularis-server/app/db/migrations/versions/: 001_initial_users_conversions_audit_logs.py
tabularis-server/app/models/: __init__.py  conversion.py
tabularis-server/app/schemas/: conversion.py  user.py
tabularis-server/app/services/: audit.py
tests/: test_smoke.py
